test/spec/block.txt
;;; TOOL: run-interp-spec
;;; STDIN_FILE: third_party/testsuite/block.wast
(;; STDOUT ;;;
out/test/spec/block.wast:295: assert_invalid passed:
  error: type mismatch in implicit return, expected [i32] but got []
  000001c: error: EndFunctionBody callback failed
out/test/spec/block.wast:299: assert_invalid passed:
  error: type mismatch in implicit return, expected [i64] but got []
  000001c: error: EndFunctionBody callback failed
out/test/spec/block.wast:303: assert_invalid passed:
  error: type mismatch in implicit return, expected [f32] but got []
  000001c: error: EndFunctionBody callback failed
out/test/spec/block.wast:307: assert_invalid passed:
  error: type mismatch in implicit return, expected [f64] but got []
  000001c: error: EndFunctionBody callback failed
out/test/spec/block.wast:312: assert_invalid passed:
  error: type mismatch in block, expected [] but got [i32]
  000001c: error: OnEndExpr callback failed
out/test/spec/block.wast:318: assert_invalid passed:
  error: type mismatch in block, expected [] but got [i64]
  000001c: error: OnEndExpr callback failed
out/test/spec/block.wast:324: assert_invalid passed:
  error: type mismatch in block, expected [] but got [f32]
  000001f: error: OnEndExpr callback failed
out/test/spec/block.wast:330: assert_invalid passed:
  error: type mismatch in block, expected [] but got [f64]
  0000023: error: OnEndExpr callback failed
out/test/spec/block.wast:337: assert_invalid passed:
  error: type mismatch in block, expected [i32] but got []
  000001b: error: OnEndExpr callback failed
out/test/spec/block.wast:343: assert_invalid passed:
  error: type mismatch in block, expected [i64] but got []
  000001b: error: OnEndExpr callback failed
out/test/spec/block.wast:349: assert_invalid passed:
  error: type mismatch in block, expected [f32] but got []
  000001b: error: OnEndExpr callback failed
out/test/spec/block.wast:355: assert_invalid passed:
  error: type mismatch in block, expected [f64] but got []
  000001b: error: OnEndExpr callback failed
out/test/spec/block.wast:362: assert_invalid passed:
  error: type mismatch in block, expected [i32] but got []
  000001c: error: OnEndExpr callback failed
out/test/spec/block.wast:368: assert_invalid passed:
  error: type mismatch in block, expected [i64] but got []
  000001c: error: OnEndExpr callback failed
out/test/spec/block.wast:374: assert_invalid passed:
  error: type mismatch in block, expected [f32] but got []
  000001c: error: OnEndExpr callback failed
out/test/spec/block.wast:380: assert_invalid passed:
  error: type mismatch in block, expected [f64] but got []
  000001c: error: OnEndExpr callback failed
out/test/spec/block.wast:387: assert_invalid passed:
  error: type mismatch in block, expected [i32] but got [i64]
  000001d: error: OnEndExpr callback failed
out/test/spec/block.wast:393: assert_invalid passed:
  error: type mismatch in block, expected [i32] but got [f32]
  0000020: error: OnEndExpr callback failed
out/test/spec/block.wast:399: assert_invalid passed:
  error: type mismatch in block, expected [i32] but got [f64]
  0000024: error: OnEndExpr callback failed
out/test/spec/block.wast:405: assert_invalid passed:
  error: type mismatch in block, expected [i64] but got [i32]
  000001d: error: OnEndExpr callback failed
out/test/spec/block.wast:411: assert_invalid passed:
  error: type mismatch in block, expected [i64] but got [f32]
  0000020: error: OnEndExpr callback failed
out/test/spec/block.wast:417: assert_invalid passed:
  error: type mismatch in block, expected [i64] but got [f64]
  0000024: error: OnEndExpr callback failed
out/test/spec/block.wast:423: assert_invalid passed:
  error: type mismatch in block, expected [f32] but got [i32]
  000001d: error: OnEndExpr callback failed
out/test/spec/block.wast:429: assert_invalid passed:
  error: type mismatch in block, expected [f32] but got [i64]
  000001d: error: OnEndExpr callback failed
out/test/spec/block.wast:435: assert_invalid passed:
  error: type mismatch in block, expected [f32] but got [f64]
  0000024: error: OnEndExpr callback failed
out/test/spec/block.wast:441: assert_invalid passed:
  error: type mismatch in block, expected [f64] but got [i32]
  000001d: error: OnEndExpr callback failed
out/test/spec/block.wast:447: assert_invalid passed:
  error: type mismatch in block, expected [f64] but got [i64]
  000001d: error: OnEndExpr callback failed
out/test/spec/block.wast:453: assert_invalid passed:
  error: type mismatch in block, expected [f64] but got [f32]
  0000020: error: OnEndExpr callback failed
out/test/spec/block.wast:460: assert_invalid passed:
  error: type mismatch in implicit return, expected [i32] but got [i64]
  0000020: error: EndFunctionBody callback failed
out/test/spec/block.wast:466: assert_invalid passed:
  error: type mismatch in implicit return, expected [i32] but got [f32]
  0000020: error: EndFunctionBody callback failed
out/test/spec/block.wast:472: assert_invalid passed:
  error: type mismatch in implicit return, expected [i32] but got [f64]
  0000020: error: EndFunctionBody callback failed
out/test/spec/block.wast:478: assert_invalid passed:
  error: type mismatch in implicit return, expected [i64] but got [i32]
  0000020: error: EndFunctionBody callback failed
out/test/spec/block.wast:484: assert_invalid passed:
  error: type mismatch in implicit return, expected [i64] but got [f32]
  0000020: error: EndFunctionBody callback failed
out/test/spec/block.wast:490: assert_invalid passed:
  error: type mismatch in implicit return, expected [i64] but got [f64]
  0000020: error: EndFunctionBody callback failed
out/test/spec/block.wast:496: assert_invalid passed:
  error: type mismatch in implicit return, expected [f32] but got [i32]
  0000020: error: EndFunctionBody callback failed
out/test/spec/block.wast:502: assert_invalid passed:
  error: type mismatch in implicit return, expected [f32] but got [i64]
  0000020: error: EndFunctionBody callback failed
out/test/spec/block.wast:508: assert_invalid passed:
  error: type mismatch in implicit return, expected [f32] but got [f64]
  0000020: error: EndFunctionBody callback failed
out/test/spec/block.wast:514: assert_invalid passed:
  error: type mismatch in implicit return, expected [f64] but got [i32]
  0000020: error: EndFunctionBody callback failed
out/test/spec/block.wast:520: assert_invalid passed:
  error: type mismatch in implicit return, expected [f64] but got [i64]
  0000020: error: EndFunctionBody callback failed
out/test/spec/block.wast:526: assert_invalid passed:
  error: type mismatch in implicit return, expected [f64] but got [f32]
  0000020: error: EndFunctionBody callback failed
out/test/spec/block.wast:533: assert_invalid passed:
  error: type mismatch in br, expected [i32] but got []
  000001c: error: OnBrExpr callback failed
out/test/spec/block.wast:539: assert_invalid passed:
  error: type mismatch in br, expected [i64] but got []
  000001c: error: OnBrExpr callback failed
out/test/spec/block.wast:545: assert_invalid passed:
  error: type mismatch in br, expected [f32] but got []
  000001c: error: OnBrExpr callback failed
out/test/spec/block.wast:551: assert_invalid passed:
  error: type mismatch in br, expected [f64] but got []
  000001c: error: OnBrExpr callback failed
out/test/spec/block.wast:558: assert_invalid passed:
  error: type mismatch in br, expected [i32] but got []
  000001c: error: OnBrExpr callback failed
out/test/spec/block.wast:564: assert_invalid passed:
  error: type mismatch in br, expected [i64] but got []
  000001c: error: OnBrExpr callback failed
out/test/spec/block.wast:570: assert_invalid passed:
  error: type mismatch in br, expected [f32] but got []
  000001c: error: OnBrExpr callback failed
out/test/spec/block.wast:576: assert_invalid passed:
  error: type mismatch in br, expected [f64] but got []
  000001c: error: OnBrExpr callback failed
out/test/spec/block.wast:583: assert_invalid passed:
  error: type mismatch in br, expected [i32] but got []
  000001d: error: OnBrExpr callback failed
out/test/spec/block.wast:589: assert_invalid passed:
  error: type mismatch in br, expected [i64] but got []
  000001d: error: OnBrExpr callback failed
out/test/spec/block.wast:595: assert_invalid passed:
  error: type mismatch in br, expected [f32] but got []
  000001d: error: OnBrExpr callback failed
out/test/spec/block.wast:601: assert_invalid passed:
  error: type mismatch in br, expected [f64] but got []
  000001d: error: OnBrExpr callback failed
out/test/spec/block.wast:608: assert_invalid passed:
  error: type mismatch in br, expected [i32] but got [i64]
  000001e: error: OnBrExpr callback failed
out/test/spec/block.wast:614: assert_invalid passed:
  error: type mismatch in br, expected [i32] but got [f32]
  0000021: error: OnBrExpr callback failed
out/test/spec/block.wast:620: assert_invalid passed:
  error: type mismatch in br, expected [i32] but got [f64]
  0000025: error: OnBrExpr callback failed
out/test/spec/block.wast:626: assert_invalid passed:
  error: type mismatch in br, expected [i64] but got [i32]
  000001e: error: OnBrExpr callback failed
out/test/spec/block.wast:632: assert_invalid passed:
  error: type mismatch in br, expected [i64] but got [f32]
  0000021: error: OnBrExpr callback failed
out/test/spec/block.wast:638: assert_invalid passed:
  error: type mismatch in br, expected [i64] but got [f64]
  0000025: error: OnBrExpr callback failed
out/test/spec/block.wast:644: assert_invalid passed:
  error: type mismatch in br, expected [f32] but got [i32]
  000001e: error: OnBrExpr callback failed
out/test/spec/block.wast:650: assert_invalid passed:
  error: type mismatch in br, expected [f32] but got [i64]
  000001e: error: OnBrExpr callback failed
out/test/spec/block.wast:656: assert_invalid passed:
  error: type mismatch in br, expected [f32] but got [f64]
  0000025: error: OnBrExpr callback failed
out/test/spec/block.wast:662: assert_invalid passed:
  error: type mismatch in br, expected [i64] but got [i32]
  000001e: error: OnBrExpr callback failed
out/test/spec/block.wast:668: assert_invalid passed:
  error: type mismatch in br, expected [f64] but got [i64]
  000001e: error: OnBrExpr callback failed
out/test/spec/block.wast:674: assert_invalid passed:
  error: type mismatch in br, expected [f64] but got [f32]
  0000021: error: OnBrExpr callback failed
out/test/spec/block.wast:681: assert_invalid passed:
  error: type mismatch in br, expected [i32] but got []
  000001d: error: OnBrExpr callback failed
out/test/spec/block.wast:687: assert_invalid passed:
  error: type mismatch in br, expected [i64] but got []
  000001d: error: OnBrExpr callback failed
out/test/spec/block.wast:693: assert_invalid passed:
  error: type mismatch in br, expected [f32] but got []
  000001d: error: OnBrExpr callback failed
out/test/spec/block.wast:699: assert_invalid passed:
  error: type mismatch in br, expected [f64] but got []
  000001d: error: OnBrExpr callback failed
out/test/spec/block.wast:706: assert_invalid passed:
  error: type mismatch in br, expected [i32] but got [i64]
  000001e: error: OnBrExpr callback failed
out/test/spec/block.wast:712: assert_invalid passed:
  error: type mismatch in br, expected [i32] but got [f32]
  0000021: error: OnBrExpr callback failed
out/test/spec/block.wast:718: assert_invalid passed:
  error: type mismatch in br, expected [i32] but got [f64]
  0000025: error: OnBrExpr callback failed
out/test/spec/block.wast:724: assert_invalid passed:
  error: type mismatch in br, expected [i64] but got [i32]
  000001e: error: OnBrExpr callback failed
out/test/spec/block.wast:730: assert_invalid passed:
  error: type mismatch in br, expected [i64] but got [f32]
  0000021: error: OnBrExpr callback failed
out/test/spec/block.wast:736: assert_invalid passed:
  error: type mismatch in br, expected [i64] but got [f64]
  0000025: error: OnBrExpr callback failed
out/test/spec/block.wast:742: assert_invalid passed:
  error: type mismatch in br, expected [f32] but got [i32]
  000001e: error: OnBrExpr callback failed
out/test/spec/block.wast:748: assert_invalid passed:
  error: type mismatch in br, expected [f32] but got [i64]
  000001e: error: OnBrExpr callback failed
out/test/spec/block.wast:754: assert_invalid passed:
  error: type mismatch in br, expected [f32] but got [f64]
  0000025: error: OnBrExpr callback failed
out/test/spec/block.wast:760: assert_invalid passed:
  error: type mismatch in br, expected [f64] but got [i32]
  000001e: error: OnBrExpr callback failed
out/test/spec/block.wast:766: assert_invalid passed:
  error: type mismatch in br, expected [f64] but got [i64]
  000001e: error: OnBrExpr callback failed
out/test/spec/block.wast:772: assert_invalid passed:
  error: type mismatch in br, expected [f64] but got [f32]
  0000021: error: OnBrExpr callback failed
out/test/spec/block.wast:779: assert_invalid passed:
  error: type mismatch in function, expected [] but got [i32]
  0000024: error: EndFunctionBody callback failed
out/test/spec/block.wast:785: assert_invalid passed:
  error: type mismatch in function, expected [] but got [i64]
  0000024: error: EndFunctionBody callback failed
out/test/spec/block.wast:791: assert_invalid passed:
  error: type mismatch in function, expected [] but got [f32]
  0000027: error: EndFunctionBody callback failed
out/test/spec/block.wast:797: assert_invalid passed:
  error: type mismatch in function, expected [] but got [f64]
  000002b: error: EndFunctionBody callback failed
out/test/spec/block.wast:804: assert_invalid passed:
  error: type mismatch in br, expected [i32] but got []
  000001e: error: OnBrExpr callback failed
out/test/spec/block.wast:810: assert_invalid passed:
  error: type mismatch in br, expected [i64] but got []
  000001e: error: OnBrExpr callback failed
out/test/spec/block.wast:816: assert_invalid passed:
  error: type mismatch in br, expected [f32] but got []
  000001e: error: OnBrExpr callback failed
out/test/spec/block.wast:822: assert_invalid passed:
  error: type mismatch in br, expected [f64] but got []
  000001e: error: OnBrExpr callback failed
out/test/spec/block.wast:829: assert_invalid passed:
  error: type mismatch in br, expected [i32] but got []
  000001f: error: OnBrExpr callback failed
out/test/spec/block.wast:835: assert_invalid passed:
  error: type mismatch in br, expected [i64] but got []
  000001f: error: OnBrExpr callback failed
out/test/spec/block.wast:841: assert_invalid passed:
  error: type mismatch in br, expected [f32] but got []
  000001f: error: OnBrExpr callback failed
out/test/spec/block.wast:847: assert_invalid passed:
  error: type mismatch in br, expected [f64] but got []
  000001f: error: OnBrExpr callback failed
out/test/spec/block.wast:854: assert_invalid passed:
  error: type mismatch in br, expected [i32] but got [i64]
  0000020: error: OnBrExpr callback failed
out/test/spec/block.wast:862: assert_invalid passed:
  error: type mismatch in br, expected [i32] but got [f32]
  0000023: error: OnBrExpr callback failed
out/test/spec/block.wast:870: assert_invalid passed:
  error: type mismatch in br, expected [i32] but got [f64]
  0000027: error: OnBrExpr callback failed
out/test/spec/block.wast:878: assert_invalid passed:
  error: type mismatch in br, expected [i64] but got [i32]
  0000020: error: OnBrExpr callback failed
out/test/spec/block.wast:886: assert_invalid passed:
  error: type mismatch in br, expected [i64] but got [f32]
  0000023: error: OnBrExpr callback failed
out/test/spec/block.wast:894: assert_invalid passed:
  error: type mismatch in br, expected [i64] but got [f64]
  0000027: error: OnBrExpr callback failed
out/test/spec/block.wast:902: assert_invalid passed:
  error: type mismatch in br, expected [f32] but got [i32]
  0000020: error: OnBrExpr callback failed
out/test/spec/block.wast:910: assert_invalid passed:
  error: type mismatch in br, expected [f32] but got [i64]
  0000020: error: OnBrExpr callback failed
out/test/spec/block.wast:918: assert_invalid passed:
  error: type mismatch in br, expected [f32] but got [f64]
  0000027: error: OnBrExpr callback failed
out/test/spec/block.wast:926: assert_invalid passed:
  error: type mismatch in br, expected [f64] but got [i32]
  0000020: error: OnBrExpr callback failed
out/test/spec/block.wast:934: assert_invalid passed:
  error: type mismatch in br, expected [f64] but got [i64]
  0000020: error: OnBrExpr callback failed
out/test/spec/block.wast:942: assert_invalid passed:
  error: type mismatch in br, expected [f64] but got [f32]
  0000023: error: OnBrExpr callback failed
out/test/spec/block.wast:951: assert_invalid passed:
  error: type mismatch in i32.ctz, expected [i32] but got []
  000001e: error: OnUnaryExpr callback failed
out/test/spec/block.wast:957: assert_invalid passed:
  error: type mismatch in i64.ctz, expected [i64] but got []
  000001e: error: OnUnaryExpr callback failed
out/test/spec/block.wast:963: assert_invalid passed:
  error: type mismatch in f32.floor, expected [f32] but got []
  000001e: error: OnUnaryExpr callback failed
out/test/spec/block.wast:969: assert_invalid passed:
  error: type mismatch in f64.floor, expected [f64] but got []
  000001e: error: OnUnaryExpr callback failed
out/test/spec/block.wast:976: assert_invalid passed:
  error: type mismatch in i32.ctz, expected [i32] but got []
  000001f: error: OnUnaryExpr callback failed
out/test/spec/block.wast:982: assert_invalid passed:
  error: type mismatch in i64.ctz, expected [i64] but got []
  000001f: error: OnUnaryExpr callback failed
out/test/spec/block.wast:988: assert_invalid passed:
  error: type mismatch in f32.floor, expected [f32] but got []
  000001f: error: OnUnaryExpr callback failed
out/test/spec/block.wast:994: assert_invalid passed:
  error: type mismatch in f64.floor, expected [f64] but got []
  000001f: error: OnUnaryExpr callback failed
out/test/spec/block.wast:1001: assert_invalid passed:
  error: type mismatch in i64.ctz, expected [i64] but got []
  0000020: error: OnUnaryExpr callback failed
out/test/spec/block.wast:1007: assert_invalid passed:
  error: type mismatch in f32.floor, expected [f32] but got []
  0000023: error: OnUnaryExpr callback failed
out/test/spec/block.wast:1013: assert_invalid passed:
  error: type mismatch in f64.floor, expected [f64] but got []
  0000027: error: OnUnaryExpr callback failed
out/test/spec/block.wast:1019: assert_invalid passed:
  error: type mismatch in i32.ctz, expected [i32] but got []
  0000020: error: OnUnaryExpr callback failed
out/test/spec/block.wast:1025: assert_invalid passed:
  error: type mismatch in f32.floor, expected [f32] but got []
  0000023: error: OnUnaryExpr callback failed
out/test/spec/block.wast:1031: assert_invalid passed:
  error: type mismatch in f64.floor, expected [f64] but got []
  0000027: error: OnUnaryExpr callback failed
out/test/spec/block.wast:1037: assert_invalid passed:
  error: type mismatch in i32.ctz, expected [i32] but got []
  0000020: error: OnUnaryExpr callback failed
out/test/spec/block.wast:1043: assert_invalid passed:
  error: type mismatch in i64.ctz, expected [i64] but got []
  0000020: error: OnUnaryExpr callback failed
out/test/spec/block.wast:1049: assert_invalid passed:
  error: type mismatch in f64.floor, expected [f64] but got []
  0000027: error: OnUnaryExpr callback failed
out/test/spec/block.wast:1055: assert_invalid passed:
  error: type mismatch in i32.ctz, expected [i32] but got []
  0000020: error: OnUnaryExpr callback failed
out/test/spec/block.wast:1061: assert_invalid passed:
  error: type mismatch in i64.ctz, expected [i64] but got []
  0000020: error: OnUnaryExpr callback failed
out/test/spec/block.wast:1067: assert_invalid passed:
  error: type mismatch in f32.floor, expected [f32] but got []
  0000023: error: OnUnaryExpr callback failed
out/test/spec/block.wast:1074: assert_malformed passed:
  out/test/spec/block/block.125.wat:1:17: error: unexpected label "$l"
  (func block end $l)
                  ^^
out/test/spec/block.wast:1078: assert_malformed passed:
  out/test/spec/block/block.126.wat:1:20: error: mismatching label "$a" != "$l"
  (func block $a end $l)
                     ^^
165/165 tests passed.
;;; STDOUT ;;)
